# ArcticInference

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py  test_model_runner_integration.py  test_suffix_tree.py  vllm_integration_demo.py
.github/: CODEOWNERS  repo_meta.yaml  semgroup.yml
.github/workflows/: docs.yaml
arctic_inference/: __init__.py  envs.py  patching.py  py_custom_ops.py  utils.py
arctic_inference/common/suffix_cache/: simulator.py  suffix_cache.py  thread_safe_suffix_cache.py  vis_tree.py  vllm_cpp_locking_integration.py
arctic_inference/common/swiftkv/: __init__.py  configs.py
arctic_inference/dynasor/: cot.py  entropy.py  evaluator.py  openai_server.py  util.py  vllm_server.py
arctic_inference/embedding/: README.md  client.py  generate_proto.py  replica.py  replica_manager.py
arctic_inference/embedding/proto/: inference.proto
arctic_inference/vllm/: args.py  config.py  llm.py  model_runner.py  plugins.py  shift_parallel.py  spec_decoding.py  stats.py  ulysses.py
arctic_inference/vllm/spec_dec/: __init__.py  arctic_proposer.py  arctic_speculator.py  fp8.py  vocab_parallel_embedding.py
arctic_inference/vllm/swiftkv/: __init__.py  linear.py  llama_swiftkv.py
benchmark/embedding/: README.md  benchmark.py  benchmark_http.py  run_benchmark.sh
csrc/custom_ops/: CMakeLists.txt  attention_generic.cuh  custom_ops.h  dispatch_utils.h  dtype_fp8.cuh  kernels.cu  quant_utils.cuh  torch_bindings.cpp
csrc/suffix_cache/: CMakeLists.txt  pybind.cc  suffix_tree.cc  suffix_tree.h  suffix_tree_extractor.cpp  suffix_tree_extractor.h
docs/: arctic-speculator.rst  arctic-ulysses.rst  conf.py  embeddings.rst  index.rst  install.rst  quick-start.rst  shift-parallel.rst  shift.rst  spec-decode.rst  suffix-decoding.rst  swiftkv.rst  ulysses.rst
examples/: offline_inference_swiftkv.py  offline_inference_ulysses.py
projects/dynasor/: README.md  naive_client.py  openai_client.py
projects/spec_dec/: README.md  offline_inference_spec_dec.py
projects/swiftkv/: README.md  offline_inference_swiftkv.py
projects/ulysses/: README.md  offline_inference_ulysses.py
scripts/: check_license.py  install_deps.py  release.sh
tests/: cleaned_0019.jsonl  cleaned_0019_1.jsonl  cleaned_0019_2.jsonl  cleaned_0019_3.jsonl  cleaned_0019_4.jsonl  cleaned_0019_5.jsonl  cleaned_0019_temp0.jsonl  data.jsonl  test_cpp_object_locking.py  test_custom_ops.py  test_problem_id_solution.py  test_suffix_cache_parallel_real_data.py
tests/benchmarks/: benchmark_utils.py  conftest.py  test_benchmarks.py
tests/benchmarks/json_mode/: evaluate_text_json_mode.py  task_description.py  utils.py
tests/unit_tests/: test_arctic_spec_max_len.py  test_custom_ops.py  test_patching.py  test_suffix_parallel.py
