[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "ninja",
    "cmake>=3.12",
    "pybind11",
    # uv pip install vllm==0.9.0 --dry-run 2>&1 | grep protobuf | sed 's/^ + //'
    "protobuf==5.29.5",
    "pybind11_global",
    "grpcio-tools",
    "torch == 2.7.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "arctic_inference"
version = "0.0.8"
description = "Snowflake LLM inference library"

[project.entry-points."vllm.general_plugins"]
arctic_inference = "arctic_inference.vllm.plugins:arctic_inference_plugin"

[tool.setuptools]
packages = [
    "arctic_inference",
    "arctic_inference.common",
    "arctic_inference.common.suffix_cache",
    "arctic_inference.common.swiftkv",
    "arctic_inference.dynasor",
    "arctic_inference.vllm",
    "arctic_inference.vllm.swiftkv",
    "arctic_inference.vllm.spec_dec",
    "arctic_inference.embedding",
]

[tool.setuptools.package-data]
"arctic_inference.embedding" = ["arctic_inference/embedding/proto/*.proto"]

[project.optional-dependencies]
vllm = [
    'vllm==0.9.0.1',
]

docs = [
    "sphinx>=8.1.3",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
]

test = [
    "lm_eval[api,ifeval]==0.4.8",
    "pandas",
    "pytest",
]

embedding = [
    "vllm==0.9.0.1",
    # uv pip install vllm==0.9.0 --dry-run 2>&1 | grep protobuf | sed 's/^ + //'
    "protobuf==5.29.5",
]

dynasor = [
    "rich",
    "prompt_toolkit",
    "pydantic",
    "datasets",
    "latex2sympy2",
    "transformers",
    "word2number",
]
